2023-10-18T16:17:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6563681973 # 1278
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-18
* notice: last 14d: unq all: 7 4163
* notice: prev accum: outdated-unq outdated-all / unq all: 1756 166762 / 1796 171089
* notice: next accum: outdated-unq outdated-all / unq all: 1756 166762 / 1796 171184
* notice: prev exec diff / last date diff / accum: unq all: +0 +95 -0 -92 / +2 +207 -0 -0 / 2 207
* notice: removed / changed dates: [] / [2023-10-04 2023-10-18]

2023-10-18T08:17:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6558123509 # 1277
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-18
* notice: last 14d: unq all: 7 4160
* notice: prev accum: outdated-unq outdated-all / unq all: 1756 166762 / 1794 170977
* notice: next accum: outdated-unq outdated-all / unq all: 1756 166762 / 1796 171089
* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -1 -123 / +2 +112 -0 -0 / 2 112
* notice: removed / changed dates: [] / [2023-10-04 2023-10-18]

2023-10-18T00:59:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6554731071 # 1276
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-18
* notice: last 14d: unq all: 7 4171
* notice: prev accum: outdated-unq outdated-all / unq all: 1753 166461 / 1794 170884
* notice: next accum: outdated-unq outdated-all / unq all: 1756 166762 / 1794 170977
* notice: prev exec diff / last date diff / accum: unq all: +0 +93 -0 -44 / +2 +300 -0 -0 / 2 300
* notice: removed / changed dates: [2023-10-03] / [2023-10-04 2023-10-17]

2023-10-17T16:17:31Z: