@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-10-06T00:59:10Z",
-  "count" : 300,
+  "timestamp" : "2023-10-19T00:59:14Z",
+  "count" : 256,
   "count_minmax" : [ 113, 300 ],
-  "count_decinc" : [ -0, +300 ],
+  "count_decinc" : [ -44, +300 ],
   "uniques" : 3,
   "uniques_minmax" : [ 3, 3 ],
   "uniques_decinc" : [ -0, +3 ]
