@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-10-18T16:17:21Z",
-  "count" : 207,
-  "count_minmax" : [ 112, 207 ],
-  "count_decinc" : [ -0, +207 ],
+  "timestamp" : "2023-10-19T00:59:14Z",
+  "count" : 300,
+  "count_minmax" : [ 112, 300 ],
+  "count_decinc" : [ -0, +300 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
