@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2023-10-18T16:17:21Z",
-  "count_outdated" : 166762,
-  "uniques_outdated" : 1756,
-  "count" : 171184,
+  "timestamp" : "2023-10-19T00:59:14Z",
+  "count_outdated" : 167062,
+  "uniques_outdated" : 1759,
+  "count" : 171277,
   "uniques" : 1796,
   "clones" : [
     {
-      "timestamp": "2023-10-04T00:00:00Z",
-      "count": 41,
-      "count_minmax": [ 41, 300 ],
-      "count_decinc": [ 259, 300 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 3 ],
-      "uniques_decinc": [ 1, 3 ]
-    },
-    {
       "timestamp": "2023-10-05T00:00:00Z",
-      "count": 300,
+      "count": 256,
       "count_minmax": [ 113, 300 ],
-      "count_decinc": [ 0, 300 ],
+      "count_decinc": [ 44, 300 ],
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2023-10-18T00:00:00Z",
-      "count": 207,
-      "count_minmax": [ 112, 207 ],
-      "count_decinc": [ 0, 207 ],
+      "count": 300,
+      "count_minmax": [ 112, 300 ],
+      "count_decinc": [ 0, 300 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
