@@ -1,15 +1,10 @@
 {
-  "count": 4163,
+  "count": 4171,
   "uniques": 7,
   "clones": [
     {
-      "timestamp": "2023-10-04T00:00:00Z",
-      "count": 41,
-      "uniques": 2
-    },
-    {
       "timestamp": "2023-10-05T00:00:00Z",
-      "count": 300,
+      "count": 256,
       "uniques": 3
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2023-10-18T00:00:00Z",
-      "count": 207,
+      "count": 300,
       "uniques": 2
     }
   ]
