@@ -1,3 +1,12 @@
+2023-10-19T00:59:14Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6568413393 # 1279
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-19
+* notice: last 14d: unq all: 7 4171
+* notice: prev accum: outdated-unq outdated-all / unq all: 1756 166762 / 1796 171184
+* notice: next accum: outdated-unq outdated-all / unq all: 1759 167062 / 1796 171277
+* notice: prev exec diff / last date diff / accum: unq all: +0 +93 -0 -44 / +2 +300 -0 -0 / 2 300
+* notice: removed / changed dates: [2023-10-04] / [2023-10-05 2023-10-18]
+
 2023-10-18T16:17:21Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6563681973 # 1278
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-18
